src/test/ui/consts/promote-no-mut.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-no-mut.rs:3:50
   |
LL | static mut TEST1: Option<&mut [i32]> = Some(&mut [1, 2, 3]);
   |                                        ----------^^^^^^^^^-
   |                                        |         |        |
   |                                        |         |        temporary value is freed at the end of this statement
   |                                        |         creates a temporary which is freed while still in use
   |                                        using this value as a static requires that borrow lasts for `'static`

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-no-mut.rs:6:18
   |
LL |     let x = &mut [1,2,3];
   |                  ^^^^^^^ creates a temporary which is freed while still in use
LL |     x
   |     - using this value as a static requires that borrow lasts for `'static`
LL | };
   | - temporary value is freed at the end of this statement

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0716`.
